# libcdlyte

./: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.OSF1  TODO  acconfig.h  aclocal.m4  bootstrap.sh  config.h  config.h.in  configure  configure.ac  configure.in  libcdlyte-config.in  libcdlyte.m4
src/: Makefile.am  Makefile.in  base64.c  cd.c  cddb.c  cdindex.c  cdlyte.h  cdlyte.h.in  cdplayer.h  cdver.h  cdver.h.in  changer.c  compat.h  data.c  data.h  extra_objs.c  irix_cd.c  win32_cd.c
tests/: Makefile.am  Makefile.in  cddb_cddbp_read.c  cddb_cddbp_sites.c  cddb_file_erase.c  cddb_file_read.c  cddb_file_write.c  cddb_http_read.c  cddb_http_sites.c  cddb_id.c  cddb_submit_http.c  cddb_submit_smtp.c  http_emulator.c  smtp_emulator.c
windows/: libcdlyte.sln  libcdplayer.sln  win32.dsw  win32.sln
windows/libcdlyte/: libcdlyte.dsp  libcdlyte.vcproj
windows/libcdlytedll/: libcdlytedll.dsp  libcdlytedll.vcproj
windows/libcdplayer/: libcdplayer.vcproj
windows/libcdplayerdll/: libcdplayerdll.dsp  libcdplayerdll.vcproj
