dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/cd.c)

LIBCDLYTE_VERSION_MAJOR=0
LIBCDLYTE_VERSION_MINOR=9
LIBCDLYTE_VERSION_MICRO=5
LIBCDLYTE_VERSION=$LIBCDLYTE_VERSION_MAJOR.$LIBCDLYTE_VERSION_MINOR.$LIBCDLYTE_VERSION_MICRO

PACKAGE=libcdlyte

AM_INIT_AUTOMAKE($PACKAGE, ${LIBCDLYTE_VERSION})
AM_CONFIG_HEADER(config.h)
AM_PROG_LIBTOOL

AC_ARG_PROGRAM

AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_CANONICAL_HOST

threads=no

AC_ARG_ENABLE(threads,
[  --enable-threads        build a thread-safe version of libcdlyte [default=guessed]],
[if test "$enableval" = "yes"
then
        threads=yes
else
        threads=no
fi])

dnl POSIX.4 threads   
if test "$threads" = "yes"
then
        AC_CHECK_LIB(pthread,pthread_create,threads=-lpthread,threads=no)
        if test "$threads" = "no"
        then
                AC_CHECK_LIB(c_r,pthread_create,threads=-lc_r,threads=no)
        fi
fi

case "$host_os" in
  irix*) 
    AC_DEFINE(IRIX_CDLYTE)
    LIBRARY_LIBS="-lcdaudio -lmediad -lds $LIBS"
    ;;
  *solaris*)
    AC_DEFINE(SOLARIS_GETMNTENT)
    AC_DEFINE(BROKEN_SOLARIS_LEADOUT)
    ;;
esac

AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h linux/cdrom.h linux/ucdrom.h sys/cdio.h io/cam/cdrom.h stdarg.h mntent.h sys/mntent.h sys/ucred.h sys/mount.h)

AC_C_CONST

case "$cross_compiling" in
  yes) 
    echo "You are cross compiling.  You will need to edit config.h and specify the target machine's endianness and word size manually."
    ;;
  no)
    AC_C_BIGENDIAN
    AC_CHECK_SIZEOF(long)
    ;;
esac

AC_HEADER_TIME

AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS(gethostbyname gethostbyname_r mkdir socket strerror strstr strtol snprintf getmntinfo)
AC_FUNC_GETMNTENT

if test "$threads" != "no"
then
        AC_DEFINE(HAVE_PTHREAD)
        CFLAGS="$CFLAGS -D_REENTRANT"
        LIBRARY_LIB="$threads $LIBRARY_LIB"
        REENTRANT="-D_REENTRANT"
fi
AC_SUBST(REENTRANT)

AC_SUBST(LIBS)
AC_SUBST(LIB_LDADD)
AC_SUBST(LIBCDLYTE_VERSION)
AC_SUBST(LIBCDLYTE_VERSION_MAJOR)
AC_SUBST(LIBCDLYTE_VERSION_MINOR)
AC_SUBST(LIBCDLYTE_VERSION_MICRO)

AC_OUTPUT([
libcdlyte-config
Makefile 
src/Makefile
src/cdlyte.h], [chmod +x libcdlyte-config])
